--- a/MeetLog/2021-06-30.md
+++ b/MeetLog/2021-06-30.md
@@ -10,16 +10,15 @@
 
 ### 금일 회의 진행 내용
 
+- 일정 정하기!
+  - 일정은 상황에 따라 변동되는 걸로!!
+  - 매주 목요일 오후 8시!
 
+- 파트 정하기!
+  - user <- 회원가입 (동건) 
+  - user ID 찾기, PW 찾기 (재원)
+  - 기본 구조 파악하기 (희찬)
 
-<hr />
+- 간단한 프로젝트 리뷰 진행
+  - 동건님이 따로 희찬님에게
 
-
-### 다음주 회의 진행까지 해야 하는 일!!
-
-
-
-<hr />
-
-
-### 특이사항
